--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.475.0",
     "mobx": "^6.13.6",
     "mobx-logger": "^0.7.1",
     "mobx-react-lite": "^4.1.0",
